selfhost/test/typechecker/tuple/error_type_mismatch_too_big.2.abra
val t: (Int, String) = (1, "two", Option.None_)